--- a/assets/sidecart-gamification.css
+++ b/assets/sidecart-gamification.css
@@ -51,3 +51,17 @@
     font-weight: 500;
     margin-top: 2px;
 }
+
+@media screen and (max-width: 768px) {
+    .cart-drawer__gamification {
+        margin-bottom: 5px;
+        padding: 5px 20px;
+    }
+    .gamification-title {
+        font-size: 12px;
+        margin-bottom: 0px;
+    }
+    .gamification-goal span {
+        font-size: 12px;
+    }
+}
